<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">beermat.git</string>
    <string name="empty_content_description"> </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="beermat_bill_saved_successful">Successfully saved bill.</string>
    <string name="beermat_profile_saved_successful">Successfully saved profile.</string>
    <string name="beermat_really_reset_amounts">Really reset amounts?</string>
    <string name="beermat_really_reset_items">Your old bill will be dismissed. Continue?</string>
    <string name="beermat_sum_label">Total:</string>
    <string name="beermat_name_unknown">-- new bill --</string>
    <string name="beermat_could_not_load_last_bill">Unable to load the last bill.</string>

    <string name="menu_bill_addposition">New entry</string>
    <string name="menu_bill_savebill">Save bill</string>
    <string name="menu_bill_saveprofile">Save as template</string>
    <string name="menu_bill_removeallitems">New bill</string>
    <string name="menu_bill_removeallamounts">Reset amounts</string>
    <string name="menu_bill_mybills">My bills</string>
    <string name="menu_bill_myprofiles">My templates</string>

    <string name="newbillposition_title">Add new item</string>
    <string name="newbillposition_description">Description</string>
    <string name="newbillposition_price">Price</string>
    <string name="newbillposition_ok">Insert</string>
    <string name="newbillposition_cancel">Cancel</string>

    <string name="editbillposition_title">Modify existing item</string>
    <string name="editbillposition_description">Description</string>
    <string name="editbillposition_price">Price</string>
    <string name="editbillposition_ok">Save</string>
    <string name="editbillposition_cancel">Cancel</string>
    <string name="editbillposition_price_must_be_positive">Please enter a price that is higher than 0.</string>
    <string name="editbillposition_description_must_not_be_null">Please enter a description.</string>

    <string name="mybilllist_no_bills">No saved bills existing.</string>
    <string name="mybilllist_load_bills_failed">Failed to load saved bills.</string>
    <string name="mybilllist_really_load">You will loose any unsaved changes in your current bill. Really
        load?</string>

    <string name="myprofilelist_no_profiles">No saved profiles existing.</string>
    <string name="myprofilelist_load_profiles_failed">Failed to load saved profiles.</string>
    <string name="myprofilelist_total_items">Items:</string>

    <string name="dialog_savebill_name_label">Name of bill:</string>

    <string name="dialog_bill_delete">Delete</string>

    <string name="dialog_billposition_delete">Delete</string>

    <string name="invalid_number_format">Please insert a number.</string>
</resources>
